--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-particles-js": "^2.7.0",
+    "react-redux": "^7.1.3",
     "react-scripts": "3.2.0",
     "react-tilt": "^0.1.4",
     "react-tilted": "^1.0.0",
+    "redux": "^4.0.4",
     "tachyon": "0.0.11",
     "tachyons": "^4.11.1"
   },
